--- a/src/Header.css
+++ b/src/Header.css
@@ -3,11 +3,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color:rgb(4, 14, 58);
+    background-color:rgb(24, 64, 241);
     margin: 0;
     position:sticky;
     z-index: 100;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
     
 }
 .header_search{
@@ -25,12 +26,15 @@
 
 .header_search_input{
  height: fit-content;
- width: 100%;
+ width: 90%;
+ height: 50%;
  padding: 10px;
 }
 .header_search_icon{
- background-color: royalblue;
- height:fit-content;
+ color:silver ;
+ border: 1px solid silver;
+ border-radius: 10%;
+ height:40%;
  width :10%;
  padding:10px;
 }
