--- a/src/Home.css
+++ b/src/Home.css
@@ -1,4 +1,4 @@
-.homecarcdsrow1{
+/* .homecarcdsrow1{
     display: flex;
     justify-content: center;
     margin: 0 auto;
@@ -18,4 +18,16 @@
     margin: 0 auto;
     max-width: 90%;
     background-color:rgb(200, 208, 224);
+} */
+.home{
+    font-family: Arial, Helvetica, sans-serif;
+    display:grid;
+    width:80%;
+    border:5px solid rgb(82, 170, 166);
+    margin: 0 auto;
+    grid-template-rows:repeat(auto-fit,minmax(400px,500px)); ;
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    background-color: rgb(82, 170, 166);
+    grid-row-gap: 10px;
+    grid-column-gap:10px;
 }
