--- a/src/Home.css
+++ b/src/Home.css
@@ -25,8 +25,8 @@
     width:80%;
     border:5px solid rgb(82, 170, 166);
     margin: 0 auto;
-    grid-template-rows:repeat(auto-fit,minmax(400px,500px)); ;
-    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    grid-template-rows:repeat(auto-fit,minmax(300px,500px)); ;
+    grid-template-columns: repeat(auto-fit,minmax(30%,1fr));
     background-color: rgb(82, 170, 166);
     grid-row-gap: 10px;
     grid-column-gap:10px;
