--- a/frontend/src/Header.css
+++ b/frontend/src/Header.css
@@ -1,11 +1,12 @@
 .header{
+    width: 100%;
     height: 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color:rgb(24, 64, 241);
     margin: 0;
-    position:sticky;
+    position:fixed;
     z-index: 100;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
