--- a/frontend/src/Productcard.css
+++ b/frontend/src/Productcard.css
@@ -22,6 +22,7 @@
 .product>button{
     background: rgb(224, 224, 87);
     margin-top: 5px;
+    cursor: pointer;
 }
 .productrating{
     display: flex;
