--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -17,7 +17,8 @@
  align-self:right;
  flex: 1;
  margin:5px 10px;
- align-items: stretch;
+ align-items: center;
+ min-width: 40%;
 }
 .header_logo{
  display: flex;
@@ -26,28 +27,40 @@
 }
 
 .header_search_input{
- height: fit-content;
+
+ border-radius: 5%;
  width: 90%;
  height: 50%;
  padding: 10px;
+ border-radius: 10px;
 }
-.header_search_icon{
+.header_search_button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
  color:silver ;
+ background-color: transparent;
  border: 1px solid silver;
- border-radius: 10%;
- height:40%;
- width :10%;
- padding:10px;
+ border-radius: 10px;
+ height: 50%;
+ width :20%;
+ padding: 5px 8px;
+ margin-right:1.5vw;
+ cursor: pointer;
+}
+.header_search_icon>p{
+height: 50%;
+
 }
 .header_nav{
  color:white;
  display: flex;
  justify-content:space-between;
- margin-right: 10px;
+ margin-right: 1vw;
 }
 .header_nav_option1{
- margin-right: 15px;
+ margin-right: 1vw;
 }
 .header_cart{
-    margin-right: 10px;
+    margin-right: 1vw;
 }
