--- a/src/screens/Home.css
+++ b/src/screens/Home.css
@@ -22,7 +22,8 @@
 .home{
     font-family: Arial, Helvetica, sans-serif;
     display:grid;
-    width:80%;
+    width:85%;
+    border-radius: 30px;
     border:5px solid rgb(82, 170, 166);
     margin: 0 auto;
     grid-template-rows:repeat(auto-fit,minmax(300px,500px)); 
