--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -43,15 +43,12 @@
  border: 1px solid silver;
  border-radius: 10px;
  height: 50%;
- width :20%;
- padding: 5px 8px;
+ width :5vw;
+ padding: 5px 5px;
  margin-right:1.5vw;
  cursor: pointer;
 }
-.header_search_icon>p{
-height: 50%;
 
-}
 .header_nav{
  color:white;
  display: flex;
