--- a/src/screens/Home.css
+++ b/src/screens/Home.css
@@ -29,7 +29,7 @@
     grid-template-rows:repeat(auto-fit,minmax(300px,500px)); 
     grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     background-color: rgb(82, 170, 166);
-    grid-row-gap: 10px;
-    grid-column-gap:10px;
+    grid-row-gap: 5vh;
+    grid-column-gap:5vw;
     padding-top: 60px;
 }
