--- a/src/components/Productcard.css
+++ b/src/components/Productcard.css
@@ -1,4 +1,6 @@
 .product{
+    text-decoration: black;
+    color: black;
     border-radius: 30px;
     border :2px solid silver;
     display: flex;
@@ -8,6 +10,13 @@
     z-index: 1;
     background:white;
 }
+.product:hover{
+    box-shadow: 8px 8px 8px 8px rgba(9, 108, 153, 0.7);
+}
+.product::shadow{
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.7);
+}
+
 .product>img{
     max-height: 40%;
     
