--- a/src/components/Productcard.css
+++ b/src/components/Productcard.css
@@ -13,13 +13,14 @@
 .product:hover{
     box-shadow: 2px 2px 5px 8px rgba(9, 108, 153, 0.7);
 }
+
 .product::shadow{
     box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.7);
 }
 
 .product>img{
     max-height: 40%;
-    
+    margin-bottom: 5px;
     max-width:50%;
 }
 
