used material ui delete icon in cart

--- a/src/screens/cartScreen.css
+++ b/src/screens/cartScreen.css
@@ -56,6 +56,12 @@ img{
     cursor: pointer;
 }
 
+.deleteButton{
+    background-color: transparent;
+    width: fit-content;
+    border:none;
+}
+
 .proceedToPay,.checkOut{
     display: flex;
     justify-content: center;
