--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -65,12 +65,24 @@ justify-content: center;
  color:white;
  display: flex;
  justify-content:space-between;
+ align-items: center;
  margin-right: 1vw;
 }
 .header_nav_option1{
  margin-right: 1vw;
- text-decoration: white;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ align-content: center;
  color: white;
+}
+#dropdown-button{
+    background-color: transparent;
+    border-color:transparent ;
+    color: white;
+    font-family:Arial, Helvetica, sans-serif;
+    margin-bottom: .1px;
+    font-size: 1rem;
 }
 .header_cart{
     display: flex;
@@ -81,7 +93,6 @@ justify-content: center;
     margin-right: 1vw;
     height: 50%;
 }
-
 .badge {
     background-color: #161899;
     color: #ffffff;
@@ -90,3 +101,8 @@ justify-content: center;
     font-size: 1.4rem;
     margin-left: 0.2rem;
   }
+.signOut,.signIn{
+    text-decoration: white;
+    color: white;
+    
+}
