--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,7 +6,8 @@
     justify-content: space-between;
     background-color:rgb(24, 64, 241);
     margin: 0;
-    position:fixed;
+    position: sticky;
+    top: 0;
     z-index: 100;
     color: white;
     font-family: Arial, Helvetica, sans-serif; 
@@ -42,7 +43,7 @@ button:hover,
     font-size: 1rem;
     margin-left: 0.2rem;
 }
-
+/* 
 .header_search_input{
 
  border-radius: 5%;
@@ -64,7 +65,7 @@ justify-content: center;
  padding: 5px 5px;
  margin-right:1.5vw;
  cursor: pointer;
-}
+} */
 
 .header_nav{
  color:white;
