--- a/src/screens/Productscreen.css
+++ b/src/screens/Productscreen.css
@@ -1,6 +1,5 @@
 .header2{
     position: fixed;
-    padding-top: 40px;
     width: 100%;
     margin-left: 5px;
 }
@@ -15,6 +14,7 @@
     grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
     grid-row-gap: 5px;
     grid-column-gap:5px;
+    margin-bottom: 30px;
 }
 .Productinfo1{
     display: flex;
