--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,4 @@
-.header{
+/* .header{
     width: 100%;
     height: 60px;
     display: flex;
@@ -11,7 +11,13 @@
     z-index: 100;
     color: white;
     font-family: Arial, Helvetica, sans-serif; 
+} */
+ul li a{
+    text-decoration: rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
+    
 }
+
 input:hover,
 select:hover,
 textarea:hover,
@@ -131,6 +137,30 @@ justify-content: center;
         border-color: transparent;
         color:white
     } 
-    
+   
+
 }
 
+
+.card-cover .card{
+    width: 100%;
+    color: white;
+    background-color: rgba(22, 101, 175, 0.7)
+}
+/* .card-cover{
+    position: sticky;
+    bottom: 0;
+    z-index: 100;
+    background-color: transparent;
+
+} */
+
+.card-cover{
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+    background: rgba(24, 64, 241,0.7);
+    color: white;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
