--- a/src/index.css
+++ b/src/index.css
@@ -21,4 +21,29 @@ code {
   background-color: thistle;
   color: brown;
 }
+.success{
+  padding: 1rem;
+  border: .1rem solid transparent;
+  background-color: rgb(117, 214, 141);
+  color: rgb(11, 121, 35);
+
+}
+
+.table {
+  font-weight: bold;
+  width: 100%;
+  border-collapse: collapse;
+}
+.table tbody tr:nth-of-type(odd) {
+  background-color: #7a97e6;
+}
+.table td,
+.table th {
+  text-align: left;
+  border: 0.1rem solid #e4e4e4;
+  padding: 0.5rem;
+}
+.table button {
+  margin: 0 0.2rem;
+}
 
